--- a/one_2D.html
+++ b/one_2D.html
@@ -239,7 +239,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -247,7 +247,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script> -->
+		</script>-->
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -347,6 +347,9 @@ resize();
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
+	plus.key.addEventListener("backbutton", function(){
+		go("index.html");
+	});
 }, false);
 </script>
 <script>
@@ -496,7 +499,7 @@ class Board{
 }
 
 
-const {N=5, cols=19, rows=19, place=0} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
+const {N=5, cols=19, rows=19, place=0, totalTime=300, stepTime=30} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
 	{mistake=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
 $("#board").css("height", WIDTH *rows/cols + "px")
 	.attr("height", 2*WIDTH *rows/cols);
@@ -558,19 +561,19 @@ let game = {
 		t0: [null, null], //上次时间
 		ids: [null, null], //计时器id
 		time: [
-			{total: 300, step: 30}, //0: 白
-			{total: 300, step: 30} //1: 黑
+			{total: totalTime, step: stepTime}, //0: 白
+			{total: totalTime, step: stepTime} //1: 黑
 		], //剩余时间
 		timeWarning: { //时间警告
 			total: {
 				60: ["#f00", 1.2],
 				180: ["#fa0", 1.1],
-				600: ["#000", 1]
+				Infinity: ["#000", 1]
 			},
 			step: {
 				10: ["#f00", 1.5],
 				20: ["#fa0", 1.1],
-				45: ["#000", 1]
+				Infinity: ["#000", 1]
 			}
 		},
 		scores: {
@@ -667,7 +670,7 @@ let game = {
 			if (this.time[this.turn].total <= 0){ //超出局时
 				this.time[this.turn].step += 5;
 			}else{
-				this.time[this.turn].step = 30; //重置步时
+				this.time[this.turn].step = stepTime; //重置步时
 				//this.time[this.turn].total += 5; //增加局时
 			}
 			this.updateTime(this.turn);
@@ -936,10 +939,10 @@ function init(){
 	clearInterval( game.ids[0] );
 	clearInterval( game.ids[1] ); //时间暂停
 	game.t0[0] = game.t0[1] = game.ids[0] = game.ids[1] = null;
-	game.time[0].total = 300;
-	game.time[0].step = 30;
-	game.time[1].total = 300;
-	game.time[1].step = 30;
+	game.time[0].total = totalTime;
+	game.time[0].step = stepTime;
+	game.time[1].total = totalTime;
+	game.time[1].step = stepTime;
 	game.scores.now[0] = game.scores.now[1] =
 		game.scores.goal[0] = game.scores.goal[1] = 0;
 	game.scores.t0 = +new Date();
@@ -1173,6 +1176,8 @@ $("#toolBtn > .review").click(function(){
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show(); //暂停
 		
+		if ( !board.lines.circle[0] ) return; //未下棋 跳过
+		
 		request({
 			type: "review" //重放
 		}).then((data)=>{
@@ -1245,7 +1250,8 @@ $("#toolBtn > .review").click(function(){
 	}else{
 		clearInterval(review_id);
 		review_id = null;
-		reviewRestore(); //重置
+		if (reviewRestore) //可能被跳过
+			reviewRestore(); //重置
 		
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show();
