--- a/two_4D.html
+++ b/two_4D.html
@@ -385,6 +385,9 @@
 			window.$ = window.jQuery = require("./js/jquery.min.js");
 		</script>
 		
+		<!-- 语言包 -->
+		<script src="./lang/lang.js" defer></script>
+		
 		<!-- babylon.js -->
 		<script src="./js/babylon.min.js"></script>
 		<script src="./js/babylonjs.materials.min.js"></script>
@@ -426,6 +429,16 @@
 		})();
 		</script>
 		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-WTWJEHK1C2"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		
+		gtag('config', 'G-WTWJEHK1C2');
+		</script>
+		
 	</head>
 	<body>
 		<header id="header">
@@ -440,8 +453,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">15:00</span> &nbsp;
-						步时：<span class="step">60s</span>
+						<span>局时：</span><span class="total">15:00</span> &nbsp;
+						<span>步时：</span><span class="step">60s</span>
 					</p>
 				</div>
 			</div>
@@ -468,8 +481,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">15:00</span> &nbsp;
-						步时：<span class="step">60s</span>
+						<span>局时：</span><span class="total">15:00</span> &nbsp;
+						<span>步时：</span><span class="step">60s</span>
 					</p>
 				</div>
 				<i></i>
@@ -500,10 +513,6 @@
 				</div>
 			</div>
 		</section>
-		
-		<footer style="display: none;">
-			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280239115'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280239115%26online%3D1%26show%3Dline' async type='text/javascript'%3E%3C/script%3E"));</script>
-		</footer>
 		
 <script>
 //生成任意维数组
@@ -1716,7 +1725,7 @@ let game = {
 			step = Math.max(this.time[1].step, 0);
 			
 			totalElem = $("#main > .black > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
@@ -1746,7 +1755,7 @@ let game = {
 			step = Math.max(this.time[0].step, 0);
 			
 			totalElem = $("#main > .white > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
